# algorithms

./: .gitignore  Algorithms.sln  CMakeLists.txt  main.cpp
Algorithms/: Algorithms.cpp  Algorithms.filters  Algorithms.vcxproj  Algorithms.vcxproj.filters  Arrays.cpp  Arrays.h  BinarySearchTree.cpp  BinarySearchTrees.cpp  BinarySearchTrees.h  BinaryTrees.cpp  BinaryTrees.h  DPExamples.cpp  DPExamples.h  DynamicProgramming.cpp  DynamicProgramming.h  Graph.cpp  Graphs.cpp  Graphs.h  GreedyAlgorithms.cpp  GreedyAlgorithms.h  HashTables.cpp  HashTables.h  Heaps.cpp  Heaps.h  Honors.cpp  Lists.cpp  Lists.h  MaxHeap.cpp  MaxHeap.h  PrimitiveTypes.cpp  PrimitiveTypes.h  Recursion.cpp  Recursion.h  Search.cpp  Search.h  Sorting.cpp  Sorting.h  SortingAlgorithms.cpp  SortingAlgorithms.h  StacksAndQueues.cpp  (+6 more)
CompetitiveProgramming/: CompetitiveProgramming.vcxproj  CompetitiveProgramming.vcxproj.filters  Problem.cpp  Problem.h  main.cpp
EPI/: 13.11_average_top_3_scores.cpp  13.13_collatz_conjecture.cpp  13.14_chess_hash_function.cpp  13.5_k_most_frequent_entries.cpp  13.6_nearest_repetition.cpp  13.8_subseq_cover.cpp  5.1_parity.cpp  BSTPrototype.h  C++Constructs.cpp  EPI.vcxproj  EPI.vcxproj.filters  GraphVertex.h  LinkedListPrototype.h  Modern.cpp  Modern.h  Problems.cpp  Sandbox.cpp  Shared.cpp  Shared.h  binary_tree_utils.h  doubly_linked_list_prototype.h  main.cpp  scores.txt  stdafx.h  targetver.h
Problems/: 5.5_multiply_shift_add.cpp  BSTPrototype.h  BubbleSort_solution.cpp  C++Constructs.cpp  Declarations.cpp  LinkedListPrototype.h  Problems.cpp  Problems.vcxproj  (+8 more)
(+697 files in other folders)
